fix: align icon group icon to vertical center

--- a/assets/scss/components/icon.scss
+++ b/assets/scss/components/icon.scss
@@ -1,5 +1,11 @@
 .icon {
-  display: inline-block;
+  display: flex;
+
+  > * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   a {
     color: var(--color-text);
